# Atmospheric

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets.json.example  DEVLOG.md  NETCODE.md  README.md  VISION.md  vcpkg.json
Engine/: CMakeLists.txt
Engine/cmake/: dependencies.cmake
Engine/default_assets/shaders/: ATTRIBUTION.txt  geometry.frag  grass.frag  grass.vert  lighting_2d.frag  lighting_2d.vert  microvoxel.frag  microvoxel.vert  microvoxel_atrous.frag  microvoxel_box.vert  microvoxel_gi.frag  pbr.frag  portal.frag  portal.vert  post_chromatic.frag  post_color_grading.frag  post_composite.frag  post_crt.frag  post_edges.frag  post_posterize.frag  post_sobel.frag  post_vhs.frag  post_vignette.frag  river.frag  river.vert  screen_gtao.frag  screen_ssgi.frag  screen_ssgi_atrous.frag  screen_ssgi_composite.frag  skinned.vert  skybox.frag  terrain.frag  terrain.tesc  terrain.tese  terrain_simple.vert  vat.vert  vat_depth.vert  vat_depth_cubemap.vert  voxel.frag  voxel.vert  (+1 more)
Engine/default_assets/shaders/slang/: lighting_2d.slang
Engine/default_assets/ui/: loading_screen.rml  mobile_hud.rcss  mobile_hud.rml  model_picker.rcss  model_picker.rml
Engine/frontends/lua/: CMakeLists.txt  lua_application.cpp  runtime.cpp  scriptable_component.cpp  scriptable_component.hpp
Engine/frontends/lua/bindings/: README.md  bind_audio.cpp  bind_core.cpp  bind_graphics.cpp  bind_input.cpp  bind_physics.cpp  bind_world.cpp
Engine/frontends/wasm/: bindings.cpp  index.d.ts  module.cpp  package.json  wasm_api.cpp
Engine/frontends/wasm/package/: .gitignore  package.json
Engine/include/: Atmospheric.hpp
Engine/include/Atmospheric/: action.hpp  action_manager.hpp  action_timeline_component.hpp  animation_clip.hpp  animation_subsystem.hpp  animator_2d.hpp  animator_component.hpp  application.hpp  asset_manager.hpp  audio_manager.hpp  audio_subsystem.hpp  batch_renderer_2d.hpp  buffer.hpp  bullet_collision.hpp  bullet_dynamics.hpp  bullet_linear_math.hpp  camera_component.hpp  camera_controller_3d.hpp  canvas_drawable.hpp  command_encoder.hpp  component.hpp  component_factory.hpp  config.hpp  console_subsystem.hpp  csg.hpp  datagram_socket.hpp  deserializer.hpp  easing.hpp  editor_layer.hpp  file_system.hpp  flipbook_component.hpp  font_manager.hpp  frustum.hpp  fsm.hpp  fsm_component.hpp  game_layer.hpp  game_object.hpp  gfx_factory.hpp  gl_buffer.hpp  gl_render_target.hpp  (+109 more)
Engine/src/: action.cpp  action_manager.cpp  action_timeline_component.cpp  animation_clip.cpp  animation_subsystem.cpp  animator_2d.cpp  animator_component.cpp  application.cpp  asset_manager.cpp  audio_manager.cpp  audio_subsystem.cpp  batch_renderer_2d.cpp  bullet_task_scheduler.cpp  camera_component.cpp  component_factory.cpp  console_subsystem.cpp  csg.cpp  easing.cpp  ecs_subsystem.cpp  ecs_subsystem.hpp  editor_layer.cpp  exr_impl.cpp  file.cpp  file.hpp  file_system.cpp  flipbook_component.cpp  font_manager.cpp  frustum.cpp  fsm_component.cpp  game_layer.cpp  game_object.cpp  gfx_factory.cpp  gl_buffer.cpp  gl_pipeline.cpp  gl_render_target.cpp  gpu_buffer.cpp  gpu_canvas_pass.cpp  gpu_pipeline.cpp  gpu_render_target.cpp  graphics_server.cpp  (+115 more)
Engine/tests/: animation_smoke_test.cpp  headless_smoke_test.cpp
Examples/: CMakeLists.txt
Examples/3DBasics/: CMakeLists.txt  components.hpp  main.cpp
Examples/3DBasics/assets/scenes/: main.json
Examples/Animation/: CMakeLists.txt  main.cpp
Examples/CardBattle/: CMakeLists.txt  README.md  battle_manager.hpp  game_data.hpp  main.cpp
Examples/CardBattle/components/: combatant_component.hpp  deck_component.hpp  enemy_brain_component.hpp  energy_component.hpp  health_component.hpp  status_component.hpp
Examples/Common/: CMakeLists.txt  README.md
Examples/Common/include/: ExampleComponents.hpp
Examples/Deathmatch/: CMakeLists.txt  README.md  authority.cpp  authority.hpp  client_net.cpp  client_net.hpp  main.cpp  protocol.hpp  render_view.hpp  server_main.cpp  shell.html  sim_common.hpp  vat_enemy.hpp
Examples/Deathmatch/gateway/: README.md  wt_udp_gateway.py
Examples/GLTFViewer/: CMakeLists.txt  README.md  main.cpp
Examples/HelloWorld/: CMakeLists.txt  components.hpp  main.cpp  shell.html
Examples/HiddenTag/: CMakeLists.txt  README.md  authority.cpp  authority.hpp  client_net.cpp  client_net.hpp  dedicated_server_main.cpp  listen_server_main.cpp  main.cpp  protocol.hpp  render_view.hpp  server_main.cpp
Examples/HideAndSeek/: CMakeLists.txt  README.md  authority.cpp  authority.hpp  client_net.cpp  client_net.hpp  listen_server_main.cpp  main.cpp  protocol.hpp  render_view.hpp  server_main.cpp  sim_common.hpp
Examples/LuaScripting/: CMakeLists.txt  shell.html
Examples/MicroVoxel/: CMakeLists.txt  main.cpp  touch_controls.hpp
Examples/MidnightSkyraiders/: ATTRIBUTION.txt  CMakeLists.txt  components.hpp  main.cpp  shell.html
Examples/MultiplayerSandbox/: CMakeLists.txt  README.md  components.hpp  game_sim.cpp  main.cpp  net_lockstep.cpp  net_lockstep.hpp  relay_loopback_test.cpp  sand_world.cpp  shell.html
Examples/Physics2D/: CMakeLists.txt  components.hpp  main.cpp  shell.html
Examples/ProceduralTerrain/: CMakeLists.txt  main.cpp  shell.html
Examples/RPG/: CMakeLists.txt  battle_ui_page.hpp  components.hpp  dialogue_ui_page.hpp  hud_ui_page.hpp  main.cpp  rpg_entity.hpp  rpg_game.cpp  rpg_game.hpp  shell.html  ui_kit.hpp  world_components.hpp
Examples/RelayServer/: CMakeLists.txt  README.md  main.cpp  main_app.cpp
Examples/SceneLoader/: CMakeLists.txt  main.cpp
Examples/Terrain/: CMakeLists.txt  main.cpp  shell.html
Examples/TerrainStreaming/: CMakeLists.txt  main.cpp
Examples/USDViewer/: CMakeLists.txt  README.md  main.cpp
Examples/VideoPlayer/: ATTRIBUTION.txt  CMakeLists.txt  README.md  main.cpp  shell.html
Examples/VoxelWorld/: CMakeLists.txt  components.hpp  main.cpp  shell.html
Examples/common/: model_picker.hpp
tests/: CMakeLists.txt  fsm_test.cpp  net_conditioner_test.cpp  reliable_channel_test.cpp  reliable_killfeed_test.cpp  ui_navigator_test.cpp
(+106 files in other folders)
